[package]
name = "solana-custom-rust"
version = "0.1.0"
edition = "2021"
authors = ["Amber Borici <amberborici10@gmail.com>"]
description = "Rust-only version of Solana custom client" 

[dependencies]
arc-swap                   = "1.7"
once_cell                  = "1.17"
tokio                      = { workspace = true }
bincode                    = { workspace = true }
chrono                     = { workspace = true }
serde_json                 = "1.0"
solana-sdk                 = { workspace = true }
solana-quic-client          = { workspace = true }
solana-transaction-status  = { workspace = true }
solana-connection-cache    = { workspace = true }
solana-client              = { workspace = true }
solana-tpu-client = { path = "../tpu-client" }