[package]
name        = "solana_custom"
version     = "0.1.0"
edition     = "2021"
authors     = ["Amber Borici <amberborici10@gmail.com>"]
description = "Python extension for Solana TPU client"
license     = "Apache-2.0"
repository  = "https://github.com/amberbor/solana-custom"

[lib]
name       = "solana_custom"
crate-type = ["cdylib"]

[dependencies]
arc-swap                   = "1.7"
once_cell                  = "1.17"
pyo3                       = { version = "0.20", features = ["extension-module", "macros"] }
pyo3-asyncio               = { version = "0.20", features = ["attributes", "tokio-runtime"] }
tokio                      = { workspace = true }
bincode                    = { workspace = true }
chrono                     = { workspace = true }
serde_json                 = "1.0"
solana-sdk                 = { workspace = true }
solana-quic-client          = { workspace = true }
solana-transaction-status  = { workspace = true }
solana-connection-cache    = { workspace = true }
solana-client              = { workspace = true }
