[package]
name        = "solana_custom"
version     = "0.1.0"
edition     = "2021"
authors     = ["Amber Borici <amberborici10@gmail.com>"]
description = "Python extension for Solana TPU client"
license     = "Apache-2.0"
repository  = "https://github.com/amberbor/solana-custom"

[lib]
name       = "solana_custom"
crate-type = ["cdylib"]

[dependencies]
arc-swap                   = "1.7"
once_cell                  = "1.17"
pyo3                       = { version = "0.25", features = ["extension-module"] }
pyo3-async-runtimes        = { version = "0.25", features = ["tokio-runtime"] }
futures                    = "0.3"

tokio                      = { workspace = true }
bincode                    = { workspace = true }
chrono                     = { workspace = true }
serde                      = { version = "1.0", features = ["derive"] }
serde_json                 = "1.0"
solana-sdk                 = { workspace = true }
solana-quic-client          = { workspace = true }
solana-transaction-status  = { workspace = true }
solana-connection-cache    = { workspace = true }
solana-client              = { workspace = true }
solana-tpu-client = { path = "../tpu-client" }
solana-runtime   = { workspace = true }
solana-pubsub-client = { workspace = true }
