[package]
name = "custom-solana-tpu-client"
version = "0.2.0"
edition = "2021"
authors = ["Amber Borici <amberborici10@gmail.com>"]
description = "A Solana TPU client library."
license = "Apache-2.0"
repository = "https://github.com/amberbor/solana-custom"
publish = true

[lib]
name = "custom_solana_tpu_client"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
bincode = "1"
futures-util = "0.3"
indexmap = "2"
indicatif = { version = "0.17", optional = true }
log = "0.4"
rayon = "1.8"
solana-connection-cache = "1.18.14"
solana-measure = "1.18.14"
solana-metrics = "1.18.14"
solana-pubsub-client = "1.18.14"
solana-rpc-client = "1.18.14"
solana-rpc-client-api = "1.18.14"
solana-sdk = "1.18.14"
solana-udp-client = "1.18.14"
thiserror = "1.0.61"
tokio = { version = "1", features = ["full"] }
env_logger = "0.10.0"

[features]
default = ["spinner"]
# Support tpu-client methods that feature a spinner progress bar for
# command-line interfaces
spinner = ["dep:indicatif", "solana-rpc-client/spinner"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
