[package]
name = "solana-tpu-client"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A Solana TPU client library."
license = "Apache-2.0"
repository = "https://github.com/your/repo"
publish = true

[lib]
name = "solana_tpu_client"
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
bincode = { workspace = true }
futures-util = { workspace = true }
indexmap = { workspace = true }
indicatif = { workspace = true, optional = true }
log = { workspace = true }
rayon = { workspace = true }
solana-connection-cache = { workspace = true }
solana-measure = { workspace = true }
solana-metrics = { workspace = true }
solana-pubsub-client = { workspace = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-sdk = { workspace = true }
solana-udp-client = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
env_logger = "0.10.0"

[features]
default = ["spinner"]
# Support tpu-client methods that feature a spinner progress bar for
# command-line interfaces
spinner = ["dep:indicatif", "solana-rpc-client/spinner"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
